[package]
name = "configtf"
version = "0.1.0"
authors = ["gpittarelli <tf2stadium@gjp.cc>"]
license = "GPL-3.0"

[dependencies]
hyper = "0.*"
iron = "0.4.*"
router = "*"
dotenv = "0.8.0"
tempdir = "0.3"
regex = "0.1"
lazy_static = "0.1.*"
chrono = { version = "0.2", features = ["serde"] }
serde = "0.8"
serde_json = "0.8"
serde_derive = "0.8"
diesel = { version = "0.8.0", features = ["chrono"] }
diesel_codegen = { version = "0.8.0", features = ["postgres"] }
log = "0.3"
env_logger = "0.3.5"

[dependencies.multipart]
version  = "0.9.0-alpha.2"
features = ["iron"]
